# HDM-ext

./: HDM-example.json  README.md  __init__.py  pyproject.toml  requirements.txt
xut/: env.py  xut.py
xut/modules/: adaln.py  attention.py  axial_rope.py  layers.py  norm.py
