[project]
name = "HDM-ext"
description = "HDM(HomeDiffusionModel) Extension"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["transformers>4.51"]

[project.urls]
Repository = "https://github.com/KohakuBlueleaf/HDM-ext"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "kblueleaf"
DisplayName = "HDM"
Icon = "https://i.meee.com.tw/4jcxbRr.jpeg"
